# ipcode

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml  test.yml
packaging/arch/: PKGBUILD
src/: cli.rs  errors.rs  instructions.rs  io.rs  lexer.rs  lib.rs  main.rs  memory.rs  parser.rs  vm.rs
stdlib/: io.ipc  math.ipc  string.ipc
tests/: test_lexer.rs  test_parser.rs  test_vm.rs
tests/programs/: add.ipc  calculator.ipc  func.ipc  hello.ipc  loop.ipc
wix/: main.wxs
